fix background breaks on resizing

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ html {
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 1) 0%, rgb(40, 40, 40) 100%);
   background: -webkit-linear-gradient(to bottom right, rgba(0, 0, 0, 1) 0%, rgb(40, 40, 40) 100%);
   background: -moz-linear-gradient(to bottom right, rgba(0, 0, 0, 1) 0%, rgb(40, 40, 40) 100%);
+  background-attachment: fixed;
 }
 
 body {
